--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
 otree==5.10.0
 
 uvicorn>=0.23,<0.30
-whitenoise==6.7.0
 python-dotenv==1.0.1
+whitenoise==6.7.0
 
 psycopg2-binary==2.9.9
 
-pandas==2.2.2
+numpy==1.26.4
+pandas==2.1.4
 openpyxl==3.1.5
+
 gspread==6.1.2
 google-auth==2.34.0
