Update requirements.txt for package versions

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,16 @@
+# oTree stack
 otree==5.10.0
 
-uvicorn>=0.23,<0.30
-python-dotenv==1.0.1
+# Server/runtime
 whitenoise==6.7.0
+python-dotenv==1.0.1
 
+# DB
 psycopg2-binary==2.9.9
 
+# Data / sheets
 numpy==1.26.4
 pandas==2.1.4
 openpyxl==3.1.5
-
 gspread==6.1.2
 google-auth==2.34.0
